# sbc

./: README.md  pyproject.toml
sbc/: calculator.py
sbc/data/: __init__.py  atomic_data.py  utils.py
sbc/modules/: __init__.py  blocks.py  loss.py  models.py
sbc/tools/: __init__.py  arg_parser.py  scripts_utils.py  train.py  train_classifier.py  utils.py
scripts/: run_train.py  run_train_classifier.py
tests/: test_bias.py  test_data.py
